Fix Gradle Run task